# spqr-tree

./: Cargo.toml
.github/workflows/: ci.yml
src/: decomposition.rs  graph.rs  io.rs  lib.rs
src/decomposition/: builder.rs  graph.rs  indices.rs
src/graph/: implementations.rs
src/graph/implementations/: bidirected_adjacency_array.rs
src/io/: binary.rs  plain_spqr_file.rs
src/io/binary/: tests.rs
src/io/plain_spqr_file/: error.rs  line_reader.rs  read_utils.rs  tests.rs
test_files/: Ultrabubble_dataset_chr_22_G182870.gfa  Ultrabubble_dataset_chr_22_G182870.spqr  multiedge.gfa  multiedge.spqr  random1_1_False_0.gfa  random1_1_False_0.spqr  random3_5_False_0.gfa  random3_5_False_0.spqr  random5_10_False_0.gfa  random5_10_False_0.spqr  tiny1.gfa  tiny1.spqr
