[package]
name = "spqr-tree"
description = "A representation of the SPQR tree in Rust with support for I/O"
version = "0.2.3"
authors = ["Sebastian Schmidt <sebastian.schmidt@helsinki.fi>"]
license = "BSD-2-Clause"
repository = "https://github.com/sebschmi/spqr-tree"

edition = "2024"

[features]
bidirected-adjacency-array = ["dep:bidirected-adjacency-array"]
binary-io = ["tagged-vec/binary-io"]

[dependencies]
tagged-vec = "0.4.4"
smallvec = "1.15.1"
num-traits = "0.2.19"
thiserror = "2.0.18"
optional-numeric-index = "0.3.5"
bidirected-adjacency-array = { version = "0.2.5", optional = true }

[dev-dependencies]
regex = "1.12.3"
