[package]
name = "spqr-tree"
description = "A representation of the SPQR tree in Rust with support for I/O"
version = "4.0.1"
authors = ["Sebastian Schmidt <sebastian.schmidt@helsinki.fi>"]
license = "BSD-2-Clause"
repository = "https://github.com/sebschmi/spqr-tree"

edition = "2024"

[features]
bidirected-adjacency-array = ["dep:bidirected-adjacency-array"]
binary-io = ["tagged-vec/binary-io"]

[dependencies]
tagged-vec = "1.0.1"
smallvec = "1.15.1"
num-traits = "0.2.19"
thiserror = "2.0.18"
optional-numeric-index = "0.4.1"
bidirected-adjacency-array = { version = "1.1.0", optional = true }
log = "0.4.29"
rustc-hash = "2.1.1"

[dev-dependencies]
regex = "1.12.3"
simplelog = "0.12.2"
itertools = "0.14.0"
